tests/snapshots/render/dumb@commonmark-spec-034-entity_and_numeric_character_references.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/commonmark-spec/034-entity_and_numeric_character_references.md
snapshot_kind: text
---
╭── föö ───────────────────────────────────────────────────────────────────────╮
│ foo                                                                          │
╰──────────────────────────────────────────────────────────────────────────────╯
