tests/snapshots/render/dumb@commonmark-spec-059-thematic_breaks.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/commonmark-spec/059-thematic_breaks.md
snapshot_kind: text
---
Foo
────────────────────────────────────────────────────────────────────────────────

bar
